--- a/cdktf/package.json
+++ b/cdktf/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@cdktf/provider-aws": "19.16.0",
+    "@cdktf/provider-azurerm": "12.15.0",
     "@cdktf/provider-github": "14.2.1",
     "cdktf": "^0.20.7",
     "constructs": "^10.3.0"
