--- a/cdktf/package.json
+++ b/cdktf/package.json
@@ -24,6 +24,7 @@
     "@cdktf/provider-aws": "19.16.0",
     "@cdktf/provider-azurerm": "12.15.0",
     "@cdktf/provider-github": "14.2.1",
+    "@cdktf/provider-google": "13.16.0",
     "cdktf": "^0.20.7",
     "constructs": "^10.3.0"
   },
