feat: inject environment variables to ECS task
Update README.md

Update autoscaler.yaml

--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -1,8 +1,9 @@
 name: Publish autoscaler image
 
+# TODO: Release job
 on:
   push:
-    branches: [main, autoscaler]
+    branches: [main]
   pull_request:
     branches: [main]
 
