feat: support Google Cloud Run

--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -39,4 +39,4 @@ jobs:
         context: autoscaler/
         file: autoscaler/Dockerfile
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:azure
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:gcp
