--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -3,7 +3,7 @@ name: Publish autoscaler image
 # TODO: Release job
 on:
   push:
-    branches: [main, aca_autoscaler]
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -22,7 +22,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     - name: Log in to the Container registry
-      uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+      uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -34,9 +34,9 @@ jobs:
         OWNER: '${{ env.IMAGE_NAME }}'
     - name: Build and push Docker image
       id: push
-      uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+      uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
       with:
         context: autoscaler/
         file: autoscaler/Dockerfile
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:gcp
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:latest
