--- a/.github/workflows/services.yaml
+++ b/.github/workflows/services.yaml
@@ -1,5 +1,8 @@
 name: PostgreSQL service example
 on: 
+  push:
+    branches:
+      - runner_hooks
   workflow_dispatch:
     inputs:
       runner:
@@ -15,7 +18,7 @@ jobs:
   # Label of the container job
   container-job:
     # Containers must run in Linux based operating systems
-    runs-on: ${{ github.event.inputs.runner }}
+    runs-on: aca-runner-set
     # Docker Hub image that `container-job` executes in
     container: node:22-bookworm
 
@@ -47,13 +50,13 @@ jobs:
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
         run: npm ci
-        working-directory: ./util
+        working-directory: ./utils/service_example
 
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL table, populates
         # the table with data, and then retrieves the data.
         run: node client.js
-        working-directory: ./util
+        working-directory: ./utils/service_example
         # Environment variables used by the `client.js` script to create a new PostgreSQL table.
         env:
           # The hostname used to communicate with the PostgreSQL service container
