--- a/.github/workflows/actions-runner.yaml
+++ b/.github/workflows/actions-runner.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     - name: Log in to the Container registry
-      uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+      uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -31,9 +31,9 @@ jobs:
         OWNER: '${{ env.IMAGE_NAME }}'
     - name: Build and push Docker image
       id: push
-      uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+      uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85 # v6.7.0
       with:
-        context: images/
+        context: .
         file: images/Dockerfile.aca
         push: true
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:latest
