--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -6,6 +6,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
@@ -39,4 +40,4 @@ jobs:
         context: autoscaler/
         file: autoscaler/Dockerfile
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:latest
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:test
