--- a/cdktf/package.json
+++ b/cdktf/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@cdktf/provider-aws": "19.16.0",
-    "@cdktf/provider-azurerm": "12.15.0",
+    "@cdktf/provider-azurerm": "^13.0.0",
     "@cdktf/provider-github": "14.2.1",
     "@cdktf/provider-google": "13.16.0",
     "cdktf": "^0.20.7",
