--- a/cdktf/package.json
+++ b/cdktf/package.json
@@ -22,20 +22,21 @@
   },
   "dependencies": {
     "@cdktf/provider-aws": "19.16.0",
-    "@cdktf/provider-azurerm": "^13.0.0",
+    "@cdktf/provider-azurerm": "^13.3.0",
     "@cdktf/provider-github": "14.2.1",
-    "@cdktf/provider-google": "13.16.0",
-    "cdktf": "^0.20.7",
+    "@cdktf/provider-google": "14.2.0",
+    "@cdktf/provider-random": "^11.0.3",
+    "cdktf": "^0.20.8",
     "constructs": "^10.3.0"
   },
   "devDependencies": {
     "@aws-sdk/client-ecs": "^3.598.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "cdktf-cli": "^0.20.7",
+    "cdktf-cli": "^0.20.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   }
 }
