feat: test also Kaniko job
Fixed container step execution

--- a/.github/workflows/services.yaml
+++ b/.github/workflows/services.yaml
@@ -1,8 +1,5 @@
 name: PostgreSQL service example
 on:
-  push:
-    branches:
-      - runner_hooks
   workflow_dispatch:
     inputs:
       runner:
@@ -18,7 +15,7 @@ jobs:
   # Label of the container job
   container-job:
     # Containers must run in Linux based operating systems
-    runs-on: ${{ github.event.inputs.runner || 'ecs-runner-set' }}
+    runs-on: ${{ github.event.inputs.runner || 'aca-runner-set' }}
     # Docker Hub image that `container-job` executes in
     container: node:22-bookworm
 
