--- a/.github/workflows/container-step.yaml
+++ b/.github/workflows/container-step.yaml
@@ -1,8 +1,5 @@
 name: Container step example
 on: 
-  push:
-    branches:
-      - runner_hooks
   workflow_dispatch:
     inputs:
       runner:
@@ -16,7 +13,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ${{ github.event.inputs.runner || 'ecs-runner-set' }}
+    runs-on: ${{ github.event.inputs.runner || 'aca-runner-set' }}
     name: A job to say hello
     steps:
       - name: Run the Container Action
