--- a/.github/workflows/services.yaml
+++ b/.github/workflows/services.yaml
@@ -10,6 +10,7 @@ on:
           - ecs-runner-set
           - aca-runner-set
           - cr-runner-set
+          - arc-runner-set
 
 jobs:
   # Label of the container job
