--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -4,8 +4,12 @@ name: Publish autoscaler image
 on:
   push:
     branches: [main]
+    paths:
+      - autoscaler/**
   pull_request:
     branches: [main]
+    paths:
+      - autoscaler/**
   workflow_dispatch:
 
 env:
@@ -33,11 +37,23 @@ jobs:
         echo "IMAGE_NAME_LC=${IMAGE_NAME,,}" >>${GITHUB_ENV}
       env:
         OWNER: '${{ env.IMAGE_NAME }}'
-    - name: Build and push Docker image
-      id: push
+    - name: Build Docker image
+      id: build
       uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
       with:
         context: autoscaler/
         file: autoscaler/Dockerfile
-        push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:test
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:${{ github.sha }}
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_LC }}:${{ github.sha }}
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
