fix: add write permission for security events

--- a/.github/workflows/autoscaler.yaml
+++ b/.github/workflows/autoscaler.yaml
@@ -23,6 +23,7 @@ jobs:
     permissions:
       packages: write
       contents: read
+      security-events: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
